fix: masthead animations on small screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,25 +67,12 @@ a {
   }
 }
 
-.sff-masthead {
-
-  > img {
-    &:nth-child(1) {
-      animation: sff-masthead-drift-1 30s ease infinite;
-    }
-
-    &:nth-child(2) {
-      animation: sff-masthead-drift-2 30s ease infinite;
-    }
-  }
-}
-
 @keyframes sff-masthead-drift-1 {
   0% {
     transform: scale(1);
   }
   50% {
-    transform: scale(1.05) translateX(-50px);
+    transform: scale(1.05) translateX(2%);
   }
   100% {
     transform: scale(1);
@@ -94,12 +81,12 @@ a {
 
 @keyframes sff-masthead-drift-2 {
   0% {
-    transform: scale(1) rotate(0);
+    transform: scale(1.1) rotate(0);
   }
   50% {
-    transform: scale(1.05) translateX(50px) rotate(-2deg);
+    transform: scale(1.3) rotate(-8deg);
   }
   100% {
-    transform: scale(1) rotate(0);
+    transform: scale(1.1) rotate(0);
   }
 }
